feat: add loading swirl when logging in (prevent csrf failure on slow connections)

--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -87,3 +87,18 @@ body.light .nav-brand {
 body.light .content-card {
     background: var(--dialog-light);
 }
+
+#loading {
+  display: block;
+  position: absolute;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  background-image: url("/static/img/loading.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+}
